# edie-runner

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.claude/: launch.json
.github/workflows/: deploy.yml  trigger-deploy.yml
docs/superpowers/plans/: 2026-04-08-phase1-greybox.md  2026-04-08-phase2-art.md  2026-04-12-m1-board-flip.md  2026-04-12-m2-board-render.md  2026-04-12-session-handoff.md
docs/superpowers/specs/: 2026-04-08-edie-runner-design.md  2026-04-12-battle-reverse-design.md  2026-04-12-edie-yut-design.md
scripts/: build.ps1  build.sh
src/: assets.rs  lib.rs  main.rs  time.rs
src/game/: background.rs  boss.rs  boss_crossfire_fix.md  dash.rs  difficulty.rs  effects.rs  leaderboard.rs  mod.rs  obstacles.rs  pickups.rs  player.rs  score.rs  state.rs  world.rs
src/platform/: input.rs  mod.rs  storage.rs  visibility.rs
src/render/: camera.rs  mod.rs  sprites.rs  ui.rs
src/reversi/: ai.rs  board.rs  game.rs  mod.rs  render.rs
src/yut/: board.rs  game.rs  mod.rs  powers.rs  render.rs  throw.rs
tools/: generate_art.py  generate_bg_variants.py  generate_extras.py  preview_boss_intro.py
web/: edie_plugin.js  index.html  landing.html
web/reverse/: index.html
web/yut/: index.html
