[package]
name = "edie_runner"
version = "0.1.0"
edition = "2021"
authors = ["helle"]
description = "Endless runner starring EDIE the ADrive robot"

[lib]
name = "edie_runner"
path = "src/lib.rs"

[[bin]]
name = "edie_runner"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
quad-storage = "0.1"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
